# ModelHamiltonian

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CNAME  README.md  genindex.html  hamiltonian.py  install.html  intro.html  lattice.py  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js  setup.py
.github/workflows/: main.yml  website.yml
api/: api.html  occupation.html  spin.html
demos/: ModelHamiltonians.ipynb
docs/: CNAME  Makefile  api.rst  ionization.csv  molham.rst  occupation.rst  spin.rst
docs/source/: conf.py
examples/: Demonstration (updated).ipynb  Demonstration.html  Demonstration.ipynb  GSoC_Advances.ipynb  Ising.html  Ising.ipynb  ModelHamiltonians.ipynb  RG.html  RG.ipynb  Real_examples.ipynb  Real_examples1.ipynb  TJUV.ipynb  TestHuckel.py  example.fcidump  gui.html  gui.ipynb  hubbard_2_site.fcidump  mohagpt.html  mohagpt.ipynb  molkit.html  molkit.ipynb  picketf.ipynb  rauk.ipynb  richardson_gaudin_basic.ipynb  test_ppp.ipynb
moha/: Hamiltonian.py  Huckel_Hamiltonian.py  MoHa.py  __init__.py  api.py  hamiltonian.py  hamiltonians.py  hamiltonians.py.f7b5b44751dbf5434871233e1d3d2eea.tmp  heisenberg.py  huckel.py  lattice.py  old_hamiltonian.py  ppp.py  utils.py
notes/: huckel-model-hamiltonian.html  huckel-model-hamiltonian.md
old/: heisenberg.py  lattice.py  ppp.py
scripts/: chatgpt_to_moha.py  defaults.toml  moha_gui.py  toml_to_moha.py
tests/: test_dense_sparse_format.ipynb  test_hamiltonian.py  test_hilbert.py  test_lattice.py  test_old_hamiltonian.py
upd/: Hamiltonian.py  Huckel_Hamiltonian.py  MoHa.py  PPP.py  h.npy  play.py  play_new.py  test.py  test_functions.py  utils.py
website/: _config.yml  _toc.yml  install.rst  intro.md
(+73 files in other folders)
